# scrapeyard

./: .env.example  .gitignore  Cargo.toml  README.md  package-lock.json  package.json  pnpm-lock.yaml  serve_yard.sh
data/: Avondale.json  Takanini.json
libs/: Cargo.toml
libs/src/: lib.rs  types.rs
scrape/: Cargo.toml
scrape/src/: libs.rs  main.rs  types.rs
src/: libs.rs  main.rs  types.rs
yard/: Cargo.toml  index.html  index.scss
yard/src/: lib.rs  libs.rs
