[package]
name = "scrapeyard"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.9.3"
dotenv = "0.15.0"
lettre = "0.10.4"
serde_json = "1.0.105"
serde = { version = "1.0.186", features = ["derive"] }
reqwest = { version = "0.11", features = ["blocking"] }
html-node = { version = "0.2.1", features = ["typed"] }
