[package]
name = "scrape"
version = "1.0.0"
edition = "2021"

[dependencies]
regex = "1.9.3"
dotenv = "0.15.0"
lettre = "0.10.4"
serde_json = "1.0.105"
tokio = { version = "1.32.0", features = ["full"] }
serde = { version = "1.0.186", features = ["derive"] }
reqwest = { version = "0.11", features = ["blocking"] }
html-node = { version = "0.2.1", features = ["typed"] }
