[package]
name = "yard"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "hydrate"
required-features = ["hydration"]

[[bin]]
name = "server"
required-features = ["ssr"]

[dependencies]
yew = "0.20.0"
serde_json = "1.0.105"
reqwest = { version = "0.11.18", features = ["json"] }
serde = { version = "1.0.164", features = ["derive"] }
uuid = { version = "1.4.0", features = ["serde"] }
futures = "0.3"
bytes = "1.4"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"
wasm-logger = "0.2"
log = "0.4"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.29.0", features = ["full"] }
warp = "0.3"
clap = { version = "4", features = ["derive"] }

[features]
hydration = ["yew/hydration"]
ssr = ["yew/ssr"]
